examples/test/testpolicy15020.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15020
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key45: value33
      key38: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value0
          key26: value32
          key41: value29
      podSelector:
        matchLabels:
          key27: value32
          key34: value40
          key5: value1
